fixed spacing for FAQs

--- a/static/css/promotional.css
+++ b/static/css/promotional.css
@@ -1712,7 +1712,7 @@ a {
   display: inline-block;
 }
 #guide-caption {
-  color: #818892;
+  color: #575e67;
   font-size: 12px;
   margin-bottom: 6px;
 }
